# gym-rdm

./: .gitignore  .pylintrc  README.md  demo.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml
gym_rdm/: __init__.py  config.py  params.py  typing.py
gym_rdm/envs/: __init__.py  display.py  dot.py  env.py  params.py
gym_rdm/task/: __init__.py  dot.py  task.py
tests/: test_dot.py  test_env.py  test_env_registration.py  test_task.py
